<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:id="@+id/members_list_screen"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:visibility="visible">

		<ListView
			android:id="@+id/members_list"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent" />

	</LinearLayout>

	<LinearLayout
		android:id="@+id/member_details_screen"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:visibility="gone">

		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/name"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/text_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>


		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/birthday"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/text_birthday"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>


		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/gender"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/text_gender"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>


		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/twitter_id"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/text_twitter_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>


		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/youtube_id"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/text_youtube_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>


		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cspan_id"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<TextView
				android:id="@+id/text_cspan_id"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="8dp"
				android:textAppearance="?android:attr/textAppearanceMedium" />

		</LinearLayout>

	</LinearLayout>
    
</LinearLayout>
